--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+
+
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,209 +9,183 @@
     android:layout_weight="1"
     tools:context="android.trafficlight2.MainActivity">
 
-
-
-    <LinearLayout
+    <android.support.v7.widget.Toolbar xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/tb_toolbar"
         android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/colorPrimary"
+        app:title="@string/app_name"
+        app:titleTextColor="@android:color/white"></android.support.v7.widget.Toolbar>
+
+
+    <ImageView
+        android:id="@+id/lightColor"
+        android:layout_width="174dp"
+        android:layout_height="235dp"
+        android:layout_marginStart="8dp"
         android:layout_weight="1"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:scaleType="center"
+        android:src="@drawable/no_light"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tb_toolbar" />
 
 
-        <ImageView
-            android:id="@+id/lightColor"
-            android:layout_width="match_parent"
-            android:layout_height="233dp"
-            android:layout_marginTop="20dp"
-            android:layout_weight="1"
-            android:scaleType="center"
-            android:src="@drawable/no_light" />
-
-
-        <TextView
-            android:id="@+id/countDown_sec"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:layout_weight="1"
-            android:layout_gravity="center"
-            android:inputType="textCapWords"
-            android:text=""
-            android:gravity="center_horizontal"
-            android:textSize="50sp" />
-
-
-        <Button
-            android:id="@+id/location"
-            android:visibility="visible"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:gravity="center_vertical"
-            android:text="取得"
-            android:textSize="30sp" />
-
-
-        <LinearLayout
-            android:layout_width="350dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/gps_x"
-                android:visibility="visible"
-                android:layout_width="350dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="32dp"
-                android:textSize="15sp"
-                android:text="0"
-                android:inputType="textCapWords" />
-
-            <TextView
-                android:id="@+id/gps_y"
-                android:visibility="visible"
-                android:layout_width="350dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="3dp"
-                android:layout_weight="1"
-                android:inputType="textCapWords"
-                android:text="0"
-                android:textSize="15sp" />
-
-        </LinearLayout>
-
-    </LinearLayout>
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/countDown_sec"
+        android:layout_width="189dp"
+        android:layout_height="78dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="8dp"
         android:layout_weight="1"
+        android:gravity="center_horizontal"
+        android:inputType="textCapWords"
+        android:text=""
+        android:textSize="50sp"
+        app:layout_constraintTop_toBottomOf="@+id/lightColor" />
+
+
+    <Button
+        android:id="@+id/location"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:baselineAligned="false">
-
-        <TextView
-            android:id="@+id/interSection_Name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:text="前方路口"
-            android:maxEms="4"
-            android:textStyle="bold"
-            android:textSize="40sp" />
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:gravity="center_vertical"
+        android:text="取得"
+        android:textSize="30sp"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="@+id/lightColor"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/countDown_sec" />
 
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+    <TextView
+        android:id="@+id/gps_x"
+        android:layout_width="332dp"
+        android:layout_height="23dp"
+        android:layout_marginBottom="8dp"
+        android:inputType="textCapWords"
+        android:text="0"
+        android:textSize="15sp"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
-            <EditText
-                android:id="@+id/intersection_input"
+    <TextView
+        android:id="@+id/gps_y"
+        android:layout_width="334dp"
+        android:layout_height="21dp"
+        android:layout_marginBottom="8dp"
+        android:layout_weight="1"
+        android:inputType="textCapWords"
+        android:text="0"
+        android:textSize="15sp"
+        android:visibility="visible"
+        app:layout_constraintBottom_toTopOf="@+id/gps_x"
+        app:layout_constraintStart_toStartOf="parent" />
 
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="0dp"
-                android:layout_weight="3"
-                android:inputType="textCapWords"
-                android:text="I0929"
-                android:textSize="25sp"
-                android:visibility="visible" />
 
-            <EditText
-                android:id="@+id/phaseid_input"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="0dp"
-                android:layout_weight="1"
-                android:inputType="textCapWords"
-                android:text="1"
-                android:textSize="25sp"
-                android:visibility="visible" />
+    <TextView
+        android:id="@+id/interSection_Name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:maxEms="4"
+        android:text="前方路口"
+        android:textSize="40sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/lightColor"
+        app:layout_constraintTop_toBottomOf="@+id/tb_toolbar" />
 
-        </LinearLayout>
 
-        <TextView
-            android:id="@+id/ICIDin"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="0dp"
-            android:layout_weight="1"
-            android:textSize="25sp"
-            android:text="ICID"
-            android:inputType="textCapWords" />
-        <TextView
-            android:id="@+id/times"
-            android:visibility="visible"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="0dp"
-            android:layout_weight="1"
-            android:textSize="25sp"
-            android:text="次數"
-            android:inputType="textCapWords" />
-        <TextView
-            android:id="@+id/angle"
-            android:visibility="invisible"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="0dp"
-            android:layout_weight="1"
-            android:textSize="25sp"
-            android:text="方位角"
-            android:inputType="textCapWords" />
-        <TextView
-            android:id="@+id/Speed"
-            android:visibility="visible"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="0dp"
-            android:layout_weight="1"
-            android:textSize="30sp"
-            android:textStyle="bold"
-            android:text="車速"
-            android:inputType="textCapWords" />
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+    <EditText
+        android:id="@+id/intersection_input"
 
-        </LinearLayout>>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_weight="3"
+        android:inputType="textCapWords"
+        android:text="I0929"
+        android:textSize="25sp"
+        android:visibility="visible"
+        app:layout_constraintStart_toEndOf="@+id/lightColor"
+        app:layout_constraintTop_toBottomOf="@+id/interSection_Name" />
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+    <EditText
+        android:id="@+id/phaseid_input"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_weight="1"
+        android:inputType="textCapWords"
+        android:text="1"
+        android:textSize="25sp"
+        android:visibility="visible"
+        app:layout_constraintStart_toEndOf="@+id/intersection_input"
+        app:layout_constraintTop_toBottomOf="@+id/interSection_Name" />
 
-        </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+    <TextView
+        android:id="@+id/ICIDin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_weight="1"
+        android:inputType="textCapWords"
+        android:text="ICID"
+        android:textSize="25sp"
+        app:layout_constraintStart_toEndOf="@+id/lightColor"
+        app:layout_constraintTop_toBottomOf="@+id/intersection_input" />
 
-        </LinearLayout>
+    <TextView
+        android:id="@+id/times"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_weight="1"
+        android:inputType="textCapWords"
+        android:text="次數"
+        android:textSize="25sp"
+        android:visibility="visible"
+        app:layout_constraintStart_toEndOf="@+id/ICIDin"
+        app:layout_constraintTop_toBottomOf="@+id/phaseid_input" />
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+    <TextView
+        android:id="@+id/angle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_weight="1"
+        android:inputType="textCapWords"
+        android:text="方位角"
+        android:textSize="25sp"
+        android:visibility="invisible"
+        app:layout_constraintStart_toEndOf="@+id/times"
+        app:layout_constraintTop_toBottomOf="@+id/phaseid_input" />
 
-        </LinearLayout>
+    <TextView
+        android:id="@+id/Speed"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_weight="1"
+        android:inputType="textCapWords"
+        android:text="車速"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        android:visibility="visible"
+        app:layout_constraintStart_toEndOf="@+id/lightColor"
+        app:layout_constraintTop_toBottomOf="@+id/ICIDin" />
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
 
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-        </LinearLayout>
-
-    </LinearLayout>
-</LinearLayout>
+</android.support.constraint.ConstraintLayout>
