--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -10,7 +10,7 @@
 
     <item
         android:id="@+id/action_help"
-        android:title="使用說明"
+        android:title="目前時制內容"
         app:showAsAction="never"/>
 
     <item
